k8s/infra/auth/keycloak/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external
  namespace: keycloak
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "keycloak.macnichol.us"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /realms/homelab
        - path:
            type: PathPrefix
            value: /resources
      backendRefs:
        - name: keycloak
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal
  namespace: keycloak
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "keycloak.macnichol.us"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 80
